# AAA26-Chicago-Mobility

./: .gitignore  README.md  _quarto.yml  pyproject.toml  report.qmd
api/: api.json
notebooks/: 01_data_exploration.ipynb  01_data_preparation.ipynb  01_weather_data_preparation.ipynb  01a_taxi_data_preparation.ipynb  01b_weather_data_preparation.ipynb  01c_poi_preparation.ipynb  02_data_exploration.ipynb  02_data_preparation.ipynb  02_poi.ipynb  03_spatial_analytics.ipynb  03a_feature_engineering.ipynb  03b_svm.ipynb  03b_svm_v2.ipynb  03c_nn.ipynb  04_feature_engineering.ipynb  04_smart_charging_RL.ipynb  05a_svm.ipynb  05a_svm_v2.ipynb  05b_nn.ipynb  data_preparation.ipynb  download_data.ipynb  prototyping.ipynb
partials/: before-body.tex  header.tex
report/: _quarto.yml  references.bib  report.qmd
report/sections/: 01-introduction.qmd  02-analysis.qmd  02-data-description.qmd  04-descriptive-analytics.qmd  05-analytics.qmd  06-conclusions.qmd
scripts/: datasets.py  download_census_tracts.py  download_community_areas.py  download_data.py  download_taxi_data.py  download_taxi_data_chunked.py  download_weather_data.py  preprocessing.py
scripts/helpers/: datasets.py  modelling.py  preprocessing.py  spatial.py
sections/: 01-introduction.qmd  02-analysis.qmd
