[project]
name = "assignment-template" # REPLACE
version = "0.1.0" # submission version must be 1.0.0
description = "Quarto template for IS3 team project reports" # REPLACE
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "ipykernel>=6.20.0",
    "pyyaml>=6.0.0",
    "jupyter>=1.0.0",
    "tqdm>=4.67.3",
    "requests>=2.33.1",
    "geopandas>=1.1.3",
    "osmnx>=2.0.7",
    "h3>=4.4.2",
    "scikit-learn>=1.7.2",
    "holidays>=0.98",
    "keras>=3.12.2",
    "torch>=2.12.1",
]

[tool.uv]
managed = true
package = false
